<resources>
    <string name="app_name">24012011123_MAD_Practical-7</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="_919241276734">+919241276734</string>
    <string name="roberts_gill_gnu_ac_in">roberts_gill@gnu.ac.in</string>
    <string name="_39_tompkins_place_okalahome">39 Tompkins Place, Okalahome</string>
    <string name="delete">Delete</string>
</resources>